--- a/Unicadets/svgTest.html
+++ b/Unicadets/svgTest.html
@@ -1,32 +1,9 @@
-<svg width="256px" height="256px" xmlns="http://www.w3.org/2000/svg">
-    <text x="38%" y="33%" font-size="50px">☲</text>
-
-    <text x="100" y="50" text-anchor="middle" dominant-baseline="central" transform="rotate(-45, 100, 50)">
-        Hello World
-    </text>
-     <text x="100" y="50" text-anchor="middle" dominant-baseline="central" transform="rotate(45, 100, 50)">
-        Hello World
-    </text>
-
-    <text x="85" 
-          y="128" 
-          text-anchor="middle"
-          dominant-baseline="central"
-          transform="rotate(-45, 100, 145)" 
-          font-size="60px">~-</text>
-
-
-    <text x="38%" y="60%" font-size="60px">{}</text>
-
-    <text 
-        x="172" 
-        y="128" 
-        font-size="60px"
-        text-anchor="middle"
-        dominant-baseline="central"
-        transform="rotate(45, 150, 128)"
-        >~</text>
-    <text x="15%" y="60%" font-size="60px">Ⳕ</text>
-    <text x="38%" y="85%" font-size="50px">,</text>
-    <text x="50%" y="85%" font-size="50px">,</text>
+<svg width="256px" height="256px"  xmlns="http://www.w3.org/2000/svg">
+    <text x="38%" y="33%" font-size="50px">ⳬ</text>
+    <text x="148" y="128" font-size="60px" text-anchor="middle" dominant-baseline="central" transform="rotate(-15, 140, 400)">↜</text>
+    <text x="38%" y="60%" font-size="60px">⬯</text>
+    <text x="172" y="128" font-size="60px" text-anchor="middle" dominant-baseline="central" transform="rotate(45, 158, 128)">↝</text>
+    <text x="15%" y="60%" font-size="60px">⨛</text>
+    <text x="40%" y="80%" font-size="50px">⌋</text>
+    <text x="52%" y="80%" font-size="50px">⌋</text>
 </svg>
