--- a/Unicadets/svgTest.html
+++ b/Unicadets/svgTest.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg width="256px" height="256px"  xmlns="http://www.w3.org/2000/svg">
     <text x="38%" y="33%" font-size="50px">ⳬ</text>
     <text x="148" y="128" font-size="60px" text-anchor="middle" dominant-baseline="central" transform="rotate(-15, 140, 400)">↜</text>
